--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ node_js:
 
 before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 
+cache:
+  directories:
+    - node_modules
+    
 env:
   - CXX=g++-4.8
 
